test/spec_vectors/func_ptrs/fail/module_2.wat
(module (elem (i32.const 0) 0) (func))